<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="imastudio.co.id.alarmmanager.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/one_time_alarm"
        android:textSize="@dimen/size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_one_time_alarm_date"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_tamggal" />

        <TextView
            android:id="@+id/tv_one_time_alarm_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/tgl_alarm"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_one_time_alarm_time"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_waktu" />

        <TextView
            android:id="@+id/tv_one_time_alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/waktu_alarm"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_one_time_alarm_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/pesan_alarm_1" />

    <Button
        android:id="@+id/btn_set_one_alam_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/set_one_alarm_time" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/repeating_alarm"
        android:textSize="@dimen/size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_repeating_alarm_time"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_repeating_alarm" />

        <TextView
            android:id="@+id/tv_repeating_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/waktu_alarm"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_repeating_alarm_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/pesan_alarm_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_repeating_time_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/set_repeating_alarm"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_cancel_repeating_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/batalkan_alarm"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>